uploaded custom appsettings.json

--- a/MovieRatingEngine.API/appsettings.Development.json
+++ b/MovieRatingEngine.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "<Connection string>"
+    "DefaultConnection": "Server=localhost; Port=5432; Database=postgres; User Id=movie-rating-engine-admin; Password=Super-Secret-Password!;"
   },
 
   "AllowedHosts": "*",
@@ -14,8 +14,7 @@
 
   "CorsSettings": {
     "AllowedOrigins": [
-      "<Origin 1 allowed to access API>",
-      "<Origin 2 allowed to access API>"
+      "http://localhost:3000"
     ]
   }
 }
